--- a/assets/style.css
+++ b/assets/style.css
@@ -49,3 +49,31 @@
 .center_main{
   margin-bottom: 50px;
 }
+.blocco .col-lg-4{
+  background-color: red;
+  height: 200px;
+  padding: 10px;
+}
+
+.card{
+  padding: 10px;
+  background-color: white;
+}
+
+.section_about{
+  height: 500px;
+  background-color: #1abc9c;
+}
+
+.section_conctact{
+  height: 500px;
+}
+
+.section_footer_1{
+  background-color: #3a546d;
+  color:white;
+}
+.section_footer_2{
+  background-color: #2c3e50;
+  color:white;
+}
