--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,9 @@
 .mt_30{
   margin-top: 30px;
 }
+.mb_30{
+  margin-bottom: 30px;
+}
 .mt_100{
   margin-top: 100px;
 }
@@ -80,26 +83,38 @@
 .center_main{
   margin-bottom: 50px;
 }
+.section_about{
+  height: 500px;
+  background-color: #1abc9c;
+}
+.title_about{
+  font-size: 50px;
+  font-weight: bold;
+  margin: 30px 0;
+}
+.p_about{
+  font-weight: bold;
+}
+.section_conctact{
+  height: 500px;
+}
+.btn_inherit_border_white{
+  color: white;
+  font-weight: bold;
+  background-color: inherit;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 15px 10px;
+}
 .blocco .col-lg-4{
   background-color: red;
   height: 200px;
   padding: 10px;
 }
-
 .card{
   padding: 10px;
   background-color: white;
 }
-
-.section_about{
-  height: 500px;
-  background-color: #1abc9c;
-}
-
-.section_conctact{
-  height: 500px;
-}
-
 .section_footer_1{
   background-color: #3a546d;
   color:white;
