--- a/assets/style.css
+++ b/assets/style.css
@@ -33,14 +33,33 @@
 .mb_30{
   margin-bottom: 30px;
 }
+.mt_50{
+  margin-top: 50px;
+}
 .mt_100{
   margin-top: 100px;
+}
+.mb_100{
+  margin-bottom: 100px;
 }
 .container_blue{
   width: 100%;
   background-color: #2c3e50;
   border: 0;
   padding: 30px 0;
+}
+#container_speciale_blu_chiaro{
+  background-color: #3a546d;
+  text-align: center;
+  width: 100%;
+  height: 220px;
+  border: 0;
+}
+#container_speciale_blu_scuro{
+  background-color: #2c3e50;
+  text-align: center;
+  width: 100%;
+  border: 0;
 }
 .container_green{
   background-color: #1abc9c;
@@ -52,6 +71,15 @@
   background-color: #1abc9c;
   padding: 12px 20px;
   border-radius: 5px;
+}
+.bt{
+  border-top: 1px solid black;
+}
+.bb{
+  border-bottom: 1px solid black;
+}
+.line_height_100{
+  line-height: 100px;
 }
 /* utlity */
 
@@ -82,11 +110,17 @@
 .top_main h1,.top_main hr,.top_main p,.top_main i{
   color: white;
 }
+#portfolio{
+  font-size: 45px;
+  margin-top: 70px;
+  font-weight: bold;
+}
+.contenitore_immagini{
+  position: relative;
+}
 .container_img{
-  background: red;
   margin: auto;
   width: 100%;
-  height: 200px;
   border-radius: 20px;
 }
 .center_main .row{
@@ -128,25 +162,27 @@
 }
 .form-control::placeholder{
   color: black;
+  background-color: inherit;
 }
 /* fine main */
 
 /* inizio footer */
-.blocco .col-lg-4{
-  background-color: red;
-  height: 200px;
-  padding: 10px;
+.decorazione_social{
+  font-size: 12px;
+  padding: 13px;
+  margin: 5px;
+  border: 1px solid white;
+  border-radius: 999px;
 }
-.card{
-  padding: 10px;
-  background-color: white;
+.decorazione_social:hover{
+  cursor: pointer;
+  background-color: #1abc9c;
 }
-.section_footer_1{
-  background-color: #3a546d;
-  color:white;
+.top_footer p{
+  font-size: 16px;
 }
-.section_footer_2{
-  background-color: #2c3e50;
-  color:white;
+.top_footer h3{
+  font-size: 25px;
 }
+
 /* fine footer */
