--- a/assets/style.css
+++ b/assets/style.css
@@ -118,6 +118,28 @@
 .contenitore_immagini{
   position: relative;
 }
+.contenitore_immagini .overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 20px;
+  background-color: #1abc9c99;
+  display: none;
+}
+.contenitore_immagini:hover .overlay{
+  display: block;
+  cursor: pointer;
+}
+.plus_box{
+  font-size: 40px;
+  color: purple;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .container_img{
   margin: auto;
   width: 100%;
@@ -189,5 +211,11 @@
 @media all and (max-width: 768px) {
   #container_speciale_blu_chiaro{
     height: 500px;
+  }
+  .navbar-default .navbar-brand{
+    font-size: 20px;
+  }
+  .stella_inline_block{
+    width: 100px;
   }
 }
